fix: horizontal align for questions

--- a/src/Components/TaskWindow/TaskWindow.scss
+++ b/src/Components/TaskWindow/TaskWindow.scss
@@ -49,6 +49,7 @@
 
 .task__window__question {
   width: 70%;
+  display: flex;
 
   input {
     border: 1px solid black;
